# DeepFilterNet3-VST3-Win

./: .gitignore  README.md  README_ja.md
.github/: release-body-windows.md  release.yml
.github/workflows/: release.yml
plugin/: Cargo.toml
plugin/src/: lib.rs
scripts/: package-release.ps1
